cmake_minimum_required(VERSION 3.23)
project(DataStructureAndAlgorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(seqlist1 seqlist1.cpp)
add_executable(seqlist2 seqlist2.cpp)
add_executable(seqlist3 seqlist3.cpp)
add_executable(seqlist4 seqlist4.cpp)
add_executable(linklist1 linklist1.cpp)
add_executable(linklist2 linklist2.cpp)

